<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/string_hit"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_openUrl"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/bt_open_url" />

            <TextView
                android:id="@+id/bt_x5test"
                style="@style/textStyle"
                android:text="@string/text_test" />

            <View
                style="@style/lineStyle"
                android:layout_width="match_parent"
                android:layout_height="1px" />

            <TextView
                android:id="@+id/bt_baidu"
                style="@style/textStyle"
                android:text="@string/text_baidu" />

            <View
                style="@style/lineStyle"
                android:layout_width="match_parent"
                android:layout_height="1px" />

            <TextView
                android:id="@+id/bt_news_detail"
                style="@style/textStyle"
                android:text="@string/news_detail" />


            <View
                style="@style/lineStyle"
                android:layout_width="match_parent"
                android:layout_height="1px" />

            <TextView
                android:id="@+id/bt_upload_photo"
                style="@style/textStyle"
                android:text="@string/text_upload_photo" />

            <View
                style="@style/lineStyle"
                android:layout_width="match_parent"
                android:layout_height="1px" />

            <TextView
                android:id="@+id/bt_call"
                style="@style/textStyle"
                android:text="@string/text_js" />

            <View
                style="@style/lineStyle"
                android:layout_width="match_parent"
                android:layout_height="1px" />

            <TextView
                android:id="@+id/bt_java_js"
                style="@style/textStyle"
                android:text="@string/js_android"
                android:textAllCaps="false" />

            <View
                style="@style/lineStyle"
                android:layout_width="match_parent"
                android:layout_height="1px" />

            <TextView
                android:id="@+id/bt_deeplink"
                style="@style/textStyle"
                android:text="@string/deeplink" />

            <View
                style="@style/lineStyle"
                android:layout_width="match_parent"
                android:layout_height="1px" />

            <TextView
                android:id="@+id/bt_movie"
                style="@style/textStyle"
                android:text="@string/text_movie" />

            <View
                style="@style/lineStyle"
                android:layout_width="match_parent"
                android:layout_height="1px" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>